--- a/index.html
+++ b/index.html
@@ -3,9 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>简单网站</title>
+    <title>你好呀</title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #64b3f4, #acb6e5);
+            background-size: 400% 400%;
+            animation: backgroundAnim 8s ease infinite;
+        }
+
+        @keyframes backgroundAnim {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .content {
+            font-size: 3rem;
+            color: white;
+            font-weight: bold;
+            text-align: center;
+            letter-spacing: 0.2em;
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
+        }
+
+        .text {
+            display: inline-block;
+            opacity: 0;
+            animation: textAnim 0.5s ease forwards;
+            animation-delay: calc(0.5s * var(--i));
+        }
+
+        @keyframes textAnim {
+            0% { opacity: 0; transform: translateY(30px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+    </style>
 </head>
 <body>
-    <h1>你好呀</h1>
+
+    <div class="content">
+        <span class="text" style="--i: 1">你</span>
+        <span class="text" style="--i: 2">好</span>
+        <span class="text" style="--i: 3">呀</span>
+    </div>
+
+    <script>
+        window.onload = () => {
+            const texts = document.querySelectorAll('.text');
+            texts.forEach((text, index) => {
+                setTimeout(() => {
+                    text.style.opacity = 1;
+                }, index * 500);
+            });
+        };
+    </script>
 </body>
 </html>
