--- a/index.html
+++ b/index.html
@@ -5,47 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>你好呀</title>
     <style>
-        body, html {
-            height: 100%;
+        body {
             margin: 0;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Arial', sans-serif;
             background: linear-gradient(135deg, #64b3f4, #ff8cfc);
-            background-size: 400% 400%;
-            animation: backgroundAnim 8s ease infinite;
+            background-size: 200% 200%;
+            font-family: 'Noto Sans SC', sans-serif;
         }
-
-        @keyframes backgroundAnim {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
         .content {
-            font-size: 5rem; /* 字体更大 */
-            font-weight: bold; /* 加粗 */
+            font-size: 15rem; /* 字体放大三倍 */
+            font-weight: bold;
             color: white;
             text-align: center;
-            letter-spacing: 0.2em;
             opacity: 0;
-            transform: scale(0.5); /* 初始字体很小 */
+            letter-spacing: -0.05em; /* 调小字间距 */
+            transform: scale(0.5);
             animation: fadeInZoom 3s ease-out forwards;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
-
         @keyframes fadeInZoom {
-            0% { opacity: 0; transform: scale(0.5); }
-            100% { opacity: 1; transform: scale(1); }
+            from {
+                opacity: 0;
+                transform: scale(0.2);
+            }
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
         }
-
     </style>
 </head>
 <body>
-
-    <div class="content">
-        你 好 呀 !
-    </div>
-
+    <div class="content">你好呀！</div>
 </body>
 </html>
