--- a/index.html
+++ b/index.html
@@ -11,21 +11,26 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #64b3f4, #ff8cfc);
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* 互联网风格背景 */
             background-size: 200% 200%;
             font-family: 'Noto Sans SC', sans-serif;
         }
         .content {
-            font-size: 15rem; /* 字体放大三倍 */
+            display: flex;
+            font-size: 15rem;
             font-weight: bold;
             color: white;
             text-align: center;
             opacity: 0;
-            letter-spacing: -0.05em; /* 调小字间距 */
-            transform: scale(0.5);
-            animation: fadeInZoom 3s ease-out forwards;
+            letter-spacing: 0.05em; /* 适当拉开字间距 */
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
+        }
+        .char {
+            display: inline-block;
+            opacity: 0;
+            transform: scale(0.5);
+            animation: fadeInZoom 0.15s ease-out forwards;
         }
         @keyframes fadeInZoom {
             from {
@@ -40,6 +45,17 @@
     </style>
 </head>
 <body>
-    <div class="content">你好呀！</div>
+    <div class="content"></div>
+    <script>
+        const text = "你好呀！";
+        const container = document.querySelector(".content");
+        text.split("").forEach((char, index) => {
+            const span = document.createElement("span");
+            span.textContent = char;
+            span.classList.add("char");
+            span.style.animationDelay = `${index * 0.2}s`;
+            container.appendChild(span);
+        });
+    </script>
 </body>
 </html>
