--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364); /* 互联网风格背景 */
-            background-size: 200% 200%;
+            background: linear-gradient(135deg, #111, #444, #888); /* 苹果风格背景 */
+            background-size: cover;
             font-family: 'Noto Sans SC', sans-serif;
+            color: white;
         }
         .content {
-            display: flex;
             font-size: 15rem;
             font-weight: bold;
-            color: white;
             text-align: center;
             opacity: 0;
-            letter-spacing: 0.05em; /* 适当拉开字间距 */
+            letter-spacing: 0.1em; /* 适当拉开字间距 */
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
         }
