--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: linear-gradient(135deg, #111, #444, #888); /* 苹果风格背景 */
-            background-size: cover;
+            background: linear-gradient(135deg, #0d0d0d, #1a1a1a, #444); /* 更高级的苹果风格深色渐变 */
             font-family: 'Noto Sans SC', sans-serif;
             color: white;
         }
@@ -20,23 +19,20 @@
             font-size: 15rem;
             font-weight: bold;
             text-align: center;
-            opacity: 0;
-            letter-spacing: 0.1em; /* 适当拉开字间距 */
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
+            letter-spacing: 0.1em; /* 适当调整字间距 */
         }
         .char {
             display: inline-block;
             opacity: 0;
-            transform: scale(0.5);
-            animation: fadeInZoom 0.15s ease-out forwards;
+            transform: scale(0.2);
+            animation: fadeInScale 0.6s ease-out forwards;
         }
-        @keyframes fadeInZoom {
-            from {
+        @keyframes fadeInScale {
+            0% {
                 opacity: 0;
                 transform: scale(0.2);
             }
-            to {
+            100% {
                 opacity: 1;
                 transform: scale(1);
             }
@@ -44,15 +40,17 @@
     </style>
 </head>
 <body>
-    <div class="content"></div>
+    <div class="content" id="text-container"></div>
     <script>
         const text = "你好呀！";
-        const container = document.querySelector(".content");
+        const container = document.getElementById("text-container");
+        const delays = [0.15, 0.2, 0.3, 0.4, 0.5]; // 先慢后快的节奏，从左到右
+
         text.split("").forEach((char, index) => {
             const span = document.createElement("span");
             span.textContent = char;
             span.classList.add("char");
-            span.style.animationDelay = `${index * 0.2}s`;
+            span.style.animationDelay = `${delays[index] || 0.1}s`;
             container.appendChild(span);
         });
     </script>
